# CrewAIProject

./: package-lock.json  package.json  pyproject.toml  replit.md  start_servers.py  tailwind.config.ts
.local/state/replit/agent/design_reference/3f938261-4683-495e-8a03-d5ec07d1218b/: c02e2453-3190-4cdf-b065-1a917c7f280d.html
attached_assets/: Pasted-Act-as-a-senior-AI-software-engineer-with-expertise-in-CrewAI-backend-development-Flask-FastAPI--1756222123843_1756222123844.txt
client/src/: index.css
client/src/components/: CareerPath.tsx  CourseRecommendations.tsx  Header.tsx  JobCards.tsx  QuickActions.tsx  RecentActivity.tsx  ResumeAnalysis.tsx  ResumeUpload.tsx  SkillsOverview.tsx  WelcomeCard.tsx
client/src/pages/: dashboard.tsx
server/: resume_processor.py  routes.ts  storage.ts
server/agents/: career_recommender.py  crew_manager.py  job_scanner.py  resume_analyzer.py  skill_matcher.py
server/data/: skills_database.json
shared/: schema.ts
