[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "pdfminer-six>=20250506",
    "pyresparser>=1.0.6",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
]
